--- a/src/style.css
+++ b/src/style.css
@@ -504,6 +504,7 @@ html, body {
 }
 
 .business-model-tooltip .tooltip-content {
+  display: block;
   visibility: hidden;
   opacity: 0;
   position: absolute;
@@ -632,7 +633,8 @@ html, body {
   border: 1px solid var(--color-border);
 }
 
-.svg-container svg {
+.svg-container svg,
+.svg-container img {
   width: 100%;
   height: auto;
   display: block;
