fix: Slide 9 grid borders now span full 100% height
- Added height: 100% to .grid-2 to fill available space
- Cards now use flexbox to stretch to full height
- Border styling extends fully from top to bottom

--- a/src/style.css
+++ b/src/style.css
@@ -439,10 +439,22 @@ html, body {
 
 .grid-2 {
   grid-template-columns: repeat(2, 1fr);
+  height: 100%;
 }
 
 .grid-3 {
   grid-template-columns: repeat(3, 1fr);
+}
+
+/* Make cards fill available grid height */
+.grid-2 .card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.grid-2 .card ul {
+  flex: 1;
 }
 
 @media (max-width: 768px) {
