--- a/src/style.css
+++ b/src/style.css
@@ -362,10 +362,10 @@ html, body {
   padding: 1.5rem;
   box-shadow: var(--shadow-md), inset 0 0 0 1px var(--color-border);
   width: 100%;
-  max-height: 95%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow: auto;
 }
 
 /* Cards */
@@ -438,7 +438,6 @@ html, body {
 
 .grid-2 {
   grid-template-columns: repeat(2, 1fr);
-  height: 100%;
 }
 
 .grid-3 {
